--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "veterinaria",
+  "name": "happy-pets",
   "version": "1.0.0",
-  "description": "Sistema de hospitalización veterinaria Happy Pets",
+  "description": "Sistema de hospitalización veterinaria",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.17.0"
