se cambia index por server

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "happy-pets",
   "version": "1.0.0",
   "description": "Sistema de hospitalización veterinaria",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^2.2.0",
